--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
+    "require-stack": "^1.0.2",
     "validator": "^13.11.0"
   },
   "keywords": []
